--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^1.13.1
   provider: ^6.0.2
   google_sign_in: ^5.2.4
+  otp_text_field: ^1.1.2
 
 dev_dependencies:
   flutter_test:
