--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,8 +45,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.firebaseapp"
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 19
+        targetSdkVersion 27
         multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
